--- a/app/src/main/res/layout/activity_palabra_videos.xml
+++ b/app/src/main/res/layout/activity_palabra_videos.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".Practica.Palabra_videos">
 
+    <ImageView
+        android:id="@+id/exitPalabraVideos"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.026"
+        app:srcCompat="@drawable/cross" />
+
     <TextView
         android:id="@+id/chosen_word_palabra_videos"
         android:layout_width="wrap_content"
@@ -19,6 +31,7 @@
         app:layout_constraintVertical_bias="0.171" />
 
     <LinearLayout
+        android:id="@+id/linearLayout4"
         android:layout_width="400dp"
         android:layout_height="370dp"
         android:gravity="center_horizontal"
@@ -75,4 +88,28 @@
         </TableRow>
     </LinearLayout>
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/tickImagePalabraVideos"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.924"
+        app:lottie_rawRes="@raw/checkbutton"
+        app:lottie_url="https://assets7.lottiefiles.com/temp/lf20_5tgmik.json" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/crossImagePalabraVideos"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.924"
+        app:lottie_url="https://assets10.lottiefiles.com/temp/lf20_yYJhpG.json" />
 </androidx.constraintlayout.widget.ConstraintLayout>
