--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -119,7 +119,7 @@
             android:layout_height="50dp" />
 
         <Button
-            android:id="@+id/boton_log_in"
+            android:id="@+id/boton_sign_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/round"
