--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -62,25 +62,21 @@
                 android:textStyle="bold|italic"
                 />
 
-            <Button
-                android:layout_width="200dp"
-                android:id="@+id/pressButton"
-                android:layout_height="50dp"
-                android:text="press"/>
-
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:text="Correo electrónico"
-                android:textColor="#757474" />
+                android:textColor="#757474"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/view_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center" />
+                android:gravity="center"
+                android:textColor="#000000" />
 
             <Space
                 android:layout_width="match_parent"
@@ -92,13 +88,15 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal|left"
                 android:text="Fecha del último ingreso"
-                android:textColor="#757474" />
+                android:textColor="#757474"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/view_last_login_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center" />
+                android:gravity="center"
+                android:textColor="#000000" />
 
             <Space
                 android:layout_width="match_parent"
@@ -112,6 +110,20 @@
                 android:text="Cerrar sesión"
                 app:backgroundTint="#B899CA" />
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/nivel"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/circle_nivel"
+            android:gravity="center_horizontal"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
+            app:layout_constraintEnd_toEndOf="@+id/progressBar"
+            app:layout_constraintStart_toStartOf="@+id/progressBar"
+            app:layout_constraintTop_toTopOf="@+id/progressBar"
+            app:layout_constraintVertical_bias="0.504" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
