--- a/app/src/main/res/layout/activity_palabra_videos.xml
+++ b/app/src/main/res/layout/activity_palabra_videos.xml
@@ -77,7 +77,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.026"
-        app:srcCompat="@drawable/cross" />
+        app:srcCompat="@drawable/finish" />
 
     <TextView
         android:id="@+id/chosen_word_palabra_videos"
