--- a/app/src/main/res/layout/activity_video_palabras.xml
+++ b/app/src/main/res/layout/activity_video_palabras.xml
@@ -114,7 +114,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.685">
 
-        <Button
+        <TextView
+            android:textSize="18sp"
+            android:gravity="center"
             android:id="@+id/boton_opcion1"
             android:layout_width="115dp"
             android:layout_height="35dp"
@@ -127,7 +129,9 @@
             android:layout_width="80dp"
             android:layout_height="0dp" />
 
-        <Button
+        <TextView
+            android:textSize="18sp"
+            android:gravity="center"
             android:id="@+id/boton_opcion2"
             android:layout_width="115dp"
             android:layout_height="35dp"
@@ -150,7 +154,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.835">
 
-        <Button
+        <TextView
+            android:textSize="18sp"
+            android:gravity="center"
             android:id="@+id/boton_opcion3"
             android:layout_width="115dp"
             android:layout_height="35dp"
@@ -163,11 +169,13 @@
             android:layout_width="80dp"
             android:layout_height="0dp" />
 
-        <Button
+        <TextView
+            android:textSize="18sp"
             android:id="@+id/boton_opcion4"
             android:layout_width="115dp"
             android:layout_height="35dp"
             android:background="@drawable/round"
+            android:gravity="center"
             android:textColor="@color/black"
             app:backgroundTint="@color/color4"
             app:autoSizeTextType="uniform"/>
