--- a/app/src/main/res/layout/popuplistas.xml
+++ b/app/src/main/res/layout/popuplistas.xml
@@ -11,7 +11,8 @@
         <TextView
             android:id="@+id/textpopup"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:autoLink="web">
 
         </TextView>
 
