--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -111,13 +111,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="15dp" />
 
-            <Button
-                android:id="@+id/logOutUser"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/round"
-                android:text="Cerrar sesión"
-                app:backgroundTint="#B899CA" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <Button
+                    android:textSize="13dp"
+                    android:id="@+id/logOutUser"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/round"
+                    android:text="Cerrar sesión"
+                    app:backgroundTint="#B899CA" />
+
+                <ImageView
+
+                    android:id="@+id/infoReferencias"
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:src="@drawable/info" />
+
+
+            </LinearLayout>
+
         </LinearLayout>
 
         <TextView
