--- a/app/src/main/res/layout/activity_palabra_videos.xml
+++ b/app/src/main/res/layout/activity_palabra_videos.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Practica.Palabra_videos">
+    tools:context=".Logic.Practica.Palabra_videos">
 
     <TableLayout
         android:layout_width="match_parent"
