--- a/app/src/main/res/layout/activity_pop_up_show_references.xml
+++ b/app/src/main/res/layout/activity_pop_up_show_references.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".popUps.PopUpShowReferences">
+    tools:context=".UI.PopUpShowReferences">
 
     <TableLayout
         android:layout_width="match_parent"
