--- a/app/src/main/res/layout/activity_pop_up_show_videos.xml
+++ b/app/src/main/res/layout/activity_pop_up_show_videos.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".popUps.PopUpShowVideos"
+    tools:context=".UI.PopUpShowVideos"
     android:background="@color/purple_200">
     <VideoView
         android:layout_width="match_parent"
