--- a/app/src/main/res/layout/activity_tabbed.xml
+++ b/app/src/main/res/layout/activity_tabbed.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".actividades.TabbedActivity">
+    tools:context=".Logic.Actividades.TabbedActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
