--- a/app/src/main/res/layout/fragment_cultura_sorda.xml
+++ b/app/src/main/res/layout/fragment_cultura_sorda.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ControladorTab.CulturaSorda">
+    tools:context=".Logic.ControladorTab.CulturaSorda">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
